Version 0.5
In Progress
 - jmdlx: show active part of siteswap feature added
 - jmqt: Added complete rewrite
 - jmpalm: Initial addition
 - jmlib: Several patches for Palm OS support
 - jmlib: Fixed incorrect implementation of getSiteposStart and getSiteposStop
 - docs: Added description of how to implement "siteswap on screen" feature
 - jmdlx: Replaced corrupted VisualStudio.zip file
 - Major Addition: TorqueScript port of jmlib
 - docs: Added how random patterns are created
 - docs: Added how siteswaps are validated
 - jmdlx: Added Random Pattern support
 - jmdlx: Added flipbook export
 - Makefile: added jmlib target
 - aajm: Random patterns
 - aajm: Added a README on how to use
 - aajm: OSX Fixes [aalib is in fink]
 - aajm: Small rendering fix [took out some old debugging code]
 - jmlib: Added random pattern generation
 - jmlib: Added authors to patterns
 - data: Added more patterns
 - jmlib: Other minor fixes
 - aajm: Added MPEG support [I scare me]
 - jmdlx: New bloodshed files, Thanks to Shawn Fumo
 - all: Makefile voodoo, add VERSION to CFLAGS
 - data: Added all valid patterns in my unix dictionary
 - aajm: Added screensaver type options -T -S, thanks Jorgen Cederlof

Version 0.4
2004-09-01
 - all: Makefile voodoo
 - jmqt: initial add
 - jmlib: Added patterns.h and patterns.cpp, which parse pattern files
 - data: Added some style data for completeness
 - jmdlx: Added printing mpegs. Thanks to luap for the color stuff.
 - jmdlx: Added printing images
 - jmdlx: HUGE list of fixes and changes from arkanes in #wxwidgets
 - jmdlx: Added Visual Studio build stuff, also arkanes
 - jmpocket: initial add
 - jmlib: minor jmpocket compatability fixes

Version 0.3
2004-03-17
 - aajm: Took out pointless macros AAWIDTH and AAHEIGHT
 - jmlib: Provide ability to describe all the builtin styles
 - aajm: modified to take advantage of new jmlib feature
 - jmdlx: modified to take advantage of new jmlib feature
 - jmdlx: Modified download locations, added progress bar